# iot_lab_temperature_sensor

./: .gitignore  README.md  arduino_secrets.h  display_temp_oled.ino  high_temperature_alert.ino  temp_display_oled.ino  temp_display_webhook.ino
mqtt_client/: environment.yml  mqtt_client.py  pyproject.toml
mqtt_client/certificates/: .gitignore
src/: .gitignore  temp_display_webhook.ino
src/AWS_IoT_WiFi/: AWS_IoT_WiFi.ino
src/temp_display_webhook/: temp_display_webhook.ino
